* Fixed issues with Unsafe masks